k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website-app
  template:
    metadata:
      labels:
        app: website-app
    spec:
      containers:
        - name: website-app
          image: website-blog  # or yourusername/website-blog:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "768Mi"
              cpu: "500m"
            limits:
              memory: "768Mi"
              cpu: "1"
