k8s/deployment_be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-green
  namespace: apps
  labels:
    app: backend
    env: green
    version: 1.2.0
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
      env: green
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: backend
        env: green
        version: 1.2.0
    spec:
      imagePullSecrets:
        - name: harbor-credentials
      containers:
        - name: backend
          image: harbor.waldoserver.top/cloud/metrics-api:1.2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 64m
              memory: 64Mi
            limits:
              cpu: 128m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
      terminationGracePeriodSeconds: 30
