k8s/deployment_fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-green
  namespace: apps
  labels:
    app: frontend
    env: green
    version: 0.3.0
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      env: green
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: frontend
        env: green
        version: 0.3.0
    spec:
      imagePullSecrets:
        - name: harbor-credentials
      containers:
        - name: frontend
          image: harbor.waldoserver.top/cloud/website-blog:0.3.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 128m
              memory: 128Mi
            limits:
              cpu: 256m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 45
            periodSeconds: 10
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3
      terminationGracePeriodSeconds: 30
