k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
spec:
  type: NodePort
  selector:
    app: website-app
  ports:
    - protocol: TCP
      port: 3000         # Port exposed by the service
      targetPort: 3000   # Port on the pod/container
      nodePort: 31000    # Port on the Minikube node (must be between 30000–32767)
