k8s/metrics_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metrics-ingress
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "redirect-https@kubernetescrd"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/preserve-host: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: metrics.waldhauser.sk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: metrics-service
            port:
              number: 5000
  - host: www.metrics.waldhauser.sk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: metrics-service
            port:
              number: 5000
  tls:
  - hosts:
    - metrics.waldhauser.sk
    - www.metrics.waldhauser.sk
    secretName: metrics-waldhauser-sk-tls
